--- a/index.html
+++ b/index.html
@@ -18,23 +18,22 @@
                 <a class="navbar-brand" href="#">
                     <img src="./MEDIA/logo-bookmark.svg" alt="brand logo" class="d-inline-block align-text-top">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span><img src="./MEDIA/icon-hamburger.svg" alt="mobile menu icon"></span>
                 </button>
-    
                 <div id="navbarSupportedContent" class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto align-items-center mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-reset" href="#features">FEATURES</a>
+                            <a class="nav-link text-reset mx-sm-2" href="#features">FEATURES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-reset" href="#pricing">PRICING</a>
+                            <a class="nav-link text-reset mx-sm-2" href="#pricing">PRICING</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-reset" href="#contact">CONTACT</a>
+                            <a class="nav-link text-reset mx-sm-2" href="#contact">CONTACT</a>
                         </li>
                         <li class="nav-item">
-                            <button type="button" class="btn btn-outline-secondary shadow-sm">LOGIN</button><!--switch hover behaviour-->
+                            <button type="button" class="btn btn-outline-secondary shadow-sm mx-sm-2">LOGIN</button><!--switch hover behaviour-->
                         </li>
                     </ul>
                 </div>
@@ -45,25 +44,25 @@
 
     <!-- section - main content -->
     <section id="main-content my-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-sm-6 order-sm-1">
+        <div class="container-fluid pe-0">
+            <div class="row justify-content-center align-items-center g-0">
+                <div class="col-sm-6 order-sm-1 flex-fill">
                     <div class="text-center img-fluid position-relative overflow-hidden" style="width: 150%;">
                         <div class="rounded-pill bg-primary position-absolute img-fluid" style="width: 100%; height: 75%; top: 25%; left: 25%; z-index:-1"></div>
                         <img class="img-fluid" src="./MEDIA/illustration-hero.svg" alt="illustration sample"> <!-- margin top?-->
                     </div>
                 </div>
-                <div class="col-sm-6 text-center text-sm-start">
+                <div class="col-sm-5 text-center text-sm-start mt-5 mt-sm-0 ms-sm-5 ps-sm-5">
                     <h2 class="fs-1 fw-bolder">
                         A Simple Bookmark Manager
                     </h2>
                     <p class="text-muted">
                         A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load isntantly. Try it for free.
                     </p>
-                    <div class="btn btn-primary">
+                    <div class="btn btn-primary shadow-sm">
                         Get it on Chrome
                     </div>
-                    <div class="btn btn-light text-muted">
+                    <div class="btn btn-light text-muted mx-2 shadow-sm">
                         Get it on Firefox
                     </div>
                 </div>
@@ -74,48 +73,87 @@
 
     <!--section - features -->
     <section id="features">
-        <div class="container-fluid my-5 py-5">
+        <div class="container-fluid my-5 py-5 g-0">
             <div class="row justify-content-center">
-                <div class="col-sm-5 text-center">
+                <div class="col-sm-6 text-center">
                     <h2 class="fs-2 fw-bolder mb-5"> <!-- letter spacing-->
                         Features
                     </h2>
                     <p class="text-muted mb-5">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
                 </div>
             </div>
-                    <!--<div class="container my-5"> container features nav-->
-            <div class="row justify-content-center text-center">
-                <div class="col-md-3">
-                    <p class="text-muted">Simple Bookmarking</p>
-                </div>
-                <div class="col-md-3">
-                    <p class="text-muted">Speedy Search</p>
-                </div>
-                <div class="col-md-3">
-                    <p class="text-muted">Easy Sharing</p>
+            <!--<div class="container my-5"> container features nav-->
+
+            <div class="row justify-content-center">
+                <div class="col-sm-7 justify-con text-center">
+                    <nav>
+                        <div class="nav nav-tabs nav-justified border-bottom-0 justify-content-evenly px-5 mx-5 my-5" id="nav-tab" role="tablist">
+                            <button class="nav-link text-muted custom-tab active" id="nav-bookmarking-tab" data-bs-toggle="tab" data-bs-target="#nav-bookmarking" type="button" role="tab" aria-controls="nav-bookmarking" aria-selected="true">Simple Bookmarking</button>
+                            <button class="nav-link text-muted custom-tab" id="nav-search-tab" data-bs-toggle="tab" data-bs-target="#nav-search" type="button" role="tab" aria-controls="nav-search" aria-selected="false">Speedy Search</button>
+                            <button class="nav-link text-muted custom-tab" id="nav-sharing-tab" data-bs-toggle="tab" data-bs-target="#nav-sharing" type="button" role="tab" aria-controls="nav-sharing" aria-selected="false">Easy Sharing</button>
+                        </div>
+                    </nav>
                 </div>
             </div>
-                    <!--</div> container features nav-->
-            </div> <!--row features-->
-            <div class="row justify-content-evenly align-items-center">
-                <div class="col-11 col-sm-5 my-5">
-                    <div class="text-center position-relative" style="width: 100%; height: 150%">
-                        <!-- <div class="rounded-pill bg-primary position-absolute img-fluid" style="width: 800px; height: 80%; top: 45%; right: 15%; z-index: -1;"></div> -->
-                        <div class="bg-primary position-absolute img-fluid" style="width: 200%; height: 100%; top: 25%; right: 15%; z-index: -1; border-bottom-right-radius: 10rem;"></div>
-                        <img class="img-fluid" src="./MEDIA/illustration-features-tab-1.svg" alt="illustration tab sample"> <!-- margin top?-->
+
+
+            <div class="tab-content container-fluid" id="nav-tabContent">
+                <div id="nav-bookmarking" class="row justify-content-evenly align-items-center tab-pane show active fade" role="tabpanel" aria-labelledby="nav-bookmarking-tab">
+                    <div class="col-11 col-sm-5 my-5">
+                        <div class="text-center position-relative" style="width: 100%; height: 150%">
+                            <div class="bg-primary position-absolute img-fluid" style="width: 200%; height: 100%; top: 25%; right: 15%; z-index: -1; border-bottom-right-radius: 10rem;"></div>
+                            <img class="img-fluid" src="./MEDIA/illustration-features-tab-1.svg" alt="illustration tab sample"> <!-- margin top?-->
+                        </div>
+                    </div>
+                    <div class="col-sm-5 text-center text-sm-start mt-5 mt-sm-0">
+                        <h2 class="fs-1 fw-bolder">
+                            Bookmark in one click
+                        </h2>
+                        <p class="text-muted">
+                            Organize your bookmarks however youlike. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.
+                        </p>
+                        <div class="btn btn-primary">
+                            More info
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-5 text-center text-sm-start mt-5 mt-sm-0">
-                    <h2 class="fs-1 fw-bolder">
-                        Bookmark in one click
-                    </h2>
-                    <p class="text-muted">
-                        Organize your bookmarks however youlike. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.
-                    </p>
-                    <div class="btn btn-primary">
-                        More info
+                <div id="nav-search" class="row justify-content-evenly align-items-center tab-pane fade" role="tabpanel" aria-labelledby="nav-search-tab">
+                    <div class="col-11 col-sm-5 my-5">
+                        <div class="text-center position-relative" style="width: 100%; height: 150%">
+                            <div class="bg-primary position-absolute img-fluid" style="width: 200%; height: 100%; top: 25%; right: 15%; z-index: -1; border-bottom-right-radius: 10rem;"></div>
+                            <img class="img-fluid" src="./MEDIA/illustration-features-tab-2.svg" alt="illustration tab sample"> <!-- margin top?-->
+                        </div>
+                    </div>
+                    <div class="col-sm-5 text-center text-sm-start mt-5 mt-sm-0">
+                        <h2 class="fs-1 fw-bolder">
+                            Intelligent search
+                        </h2>
+                        <p class="text-muted">
+                            Our powerful search feature will help you find your saved sites in no time at all. No need to trawl through all of your bookmarks.
+                        </p>
+                        <div class="btn btn-primary">
+                            More info
+                        </div>
                     </div>
                 </div>
+                <div id="nav-sharing" class="row justify-content-evenly align-items-center tab-pane fade" role="tabpanel" aria-labelledby="nav-sharing-tab">
+                    <div class="col-11 col-sm-5 my-5">
+                        <div class="text-center position-relative" style="width: 100%; height: 150%">
+                            <div class="bg-primary position-absolute img-fluid" style="width: 200%; height: 100%; top: 25%; right: 15%; z-index: -1; border-bottom-right-radius: 10rem;"></div>
+                            <img class="img-fluid" src="./MEDIA/illustration-features-tab-3.svg" alt="illustration tab sample"> <!-- margin top?-->
+                        </div>
+                    </div>
+                    <div class="col-sm-5 text-center text-sm-start mt-5 mt-sm-0">
+                        <h2 class="fs-1 fw-bolder">
+                            Share your bookmarks
+                        </h2>
+                        <p class="text-muted">
+                            Easily share your bookmarks and collections with others. Create a sherable link that you can send at the click of a button.
+                        </p>
+                        <div class="btn btn-primary">
+                            More info
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
